--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!doctype html>
-<html>
+<html lang="en">
+
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Unit Test</title>
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/white.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/monokai.css">
+		<link rel="stylesheet" href="lib/css/highlight_vs.css">
+
+		<!-- eigene Styles -->
+		<link rel="stylesheet" href="css/theme/jugendhackt.css" id="theme">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -21,29 +28,96 @@
 			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
+
+		<!--[if lt IE 9]>
+		<script src="lib/js/html5shiv.js"></script>
+		<![endif]-->
 	</head>
+
 	<body>
+
 		<div class="reveal">
+
+			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
-		</div>
+				<section>
+					<img class="plain" src="/images/jugendhackt_logo.svg"  height="110" width="110" />
+					<h1>Unit Test</h1>
+					<h5>Testen? Ich mache doch keine Fehler!</h5>
+				</section>
+
+				<section>
+					<h2>Was ist ein Unit Test?</h2>
+					<section>
+						<p class="fragment">Deutsche Übersetzungen:</dp>
+						<ul>
+							<li class="fragment">Modultest</li>
+							<li class="fragment">Komponententest</li>
+						</ul>
+					</section>
+					<section>
+						<p>Was ist ein Modul bzw. eine Komponente?</p>
+						<ul>
+							<li class="fragment">Ein Modul/Eine Komponente ist eine geschlossene Einheit von einer Funktionalität</li>
+							<li class="fragment">Es kann z.B. eine Klasse sein...</li>
+							<li class="fragment">...oder sogar eine einzelne Methode bzw. Funktion</li>
+						</ul>
+					</section>
+					<section>
+						<pre>
+							<code class="C#" data-trim data-line-numbers="">
+								public class Car
+								{
+									// weiterer code
+			
+									public void Drive()
+									{
+										Console.WriteLine("Wrumm!");
+									}
+								}
+							</code>
+						</pre>
+					</section>
+					<section>
+						<p>Ein Unit Test ist ein Stück Code,<br/>der unseren Code testet</p>
+					</section>
+				</section>
+				<section>
+					<h2>Wozu brauchen wir Unit Tests?</h2>
+					<section>
+						<ul>
+							<li class="fragment">Ohne Unit Tests muss das Programm manuell getestet werden</li>
+							<li class="fragment">Manuelle Tests sind schlecht skalierbar</li>
+							<li class="fragment">Unit Tests geben uns schnell Feedback</li>
+						</ul>
+					</section>
+				</section>
 
 		<script src="js/reveal.js"></script>
 
 		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
+
+			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
+				controls: true,
+				progress: true,
+				center: true,
+				hash: true,
+
+				transition: 'slide', // none/fade/slide/convex/concave/zoom
+
+				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true }
+					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/highlight/highlight.js', async: true },
+					{ src: 'plugin/search/search.js', async: true },
+					{ src: 'plugin/zoom-js/zoom.js', async: true },
+					{ src: 'plugin/notes/notes.js', async: true }
 				]
 			});
+
 		</script>
+
 	</body>
 </html>
