--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<img class="plain" src="/images/jugendhackt_logo.svg"  height="110" width="110" />
+					<img class="plain" src="images/jugendhackt_logo.svg"  height="110" width="110" />
 					<h1>Unit Test</h1>
 					<h5>Testen? Ich mache doch keine Fehler!</h5>
 				</section>
