--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css" id="theme">
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/reveal.css" />
+		<link rel="stylesheet" href="css/theme/white.css" id="theme" />
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/highlight_vs.css">
 
 		<!-- eigene Styles -->
-		<link rel="stylesheet" href="css/theme/jugendhackt.css" id="theme">
+		<link rel="stylesheet" href="css/custom/jugendhackt.css" />
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -40,10 +40,15 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section>
+				<section data-background="#dddddd">
 					<img class="plain" src="images/jugendhackt_logo.svg"  height="110" width="110" />
 					<h1>Unit Test</h1>
 					<h5>Testen? Ich mache doch keine Fehler!</h5>
+					<p>
+						<small>
+							8BitVentilator ● <a href="https://github.com/8BitVentilator">github.com/8BitVentilator</a>
+						</small>
+					</p>
 				</section>
 
 				<section>
