--- a/index.html
+++ b/index.html
@@ -138,10 +138,24 @@
 								</td>
 							</tr>
 						</table>
-					
 					</section>
 				</section>
-
+				<section>
+						<h1>Demo</h1>
+						<p>Fizz Buzz-Spiel</p>
+				</section>
+				<section>
+						<h2>Demo</h2>
+						<section>
+						<p>Es soll die Komponente "FizzBuzz" geschrieben, die die Funktion "Translate" (= Übersetze) besitzt.
+						Als Parameter bekommt die Funktion eine Zahl und sie soll folgendermaßen übersetzt werden:</p>
+						<ul>
+							<li>Für Vielfache von 3 gibt „Fizz“ zurück</li>
+							<li>Für Vielfache von 5 gib „Buzz“ zurück</li>
+							<li>Für Vielfache von 3 und 5 gib „FizzBuzz“ zurück</li>
+						</ul>
+					</section>
+				</section>
 		<script src="js/reveal.js"></script>
 
 		<script>
