--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 							<li>Für Vielfache von 3 gibt „Fizz“ zurück</li>
 							<li>Für Vielfache von 5 gib „Buzz“ zurück</li>
 							<li>Für Vielfache von 3 und 5 gib „FizzBuzz“ zurück</li>
+							<li>Für alle anderen Zahlen gib die Zahl zurück</li>
 						</ul>
 					</section>
 				</section>
